# pyaccelerate

./: .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pypi-stats.yml
benchmarks/: __main__.py  bench_vs_libs.py  run.py
bindings/nodejs/: README.md  index.d.ts  index.js  package.json  test.js
bindings/rust/pyaccelerate_native/: Cargo.toml  pyproject.toml
bindings/rust/pyaccelerate_native/src/: lib.rs
examples/: __init__.py  example_basic.py  example_cpu_bound.py  example_max_mode.py  example_parallel_io.py  example_pipeline.py  example_priority.py
src/pyaccelerate/: __init__.py  adaptive.py  android.py  autotune.py  benchmark.py  circuit_breaker.py  cli.py  cpu.py  engine.py  health.py  iot.py  k8s.py  lockfree_queue.py  max_mode.py  memory.py  metrics.py  pipeline.py  plugins.py  priority.py  profiler.py  rate_limiter.py  retry.py  server.py  threads.py  virt.py  work_stealing.py
src/pyaccelerate/_native/: __init__.py  _fast_deque.pyx  setup_cython.py
src/pyaccelerate/gpu/: __init__.py  cuda.py  detector.py  dispatch.py  hasher.py  intel.py  opencl.py
src/pyaccelerate/npu/: __init__.py  detector.py  inference.py  onnx_rt.py  openvino.py
tests/: conftest.py  test_adaptive.py  test_android.py  test_autotune.py  test_cpu.py  test_engine.py  test_gpu.py  test_iot.py  test_k8s.py  test_lockfree_queue.py  test_max_mode.py  test_memory.py  test_metrics.py  test_npu.py  test_priority.py  test_profiler.py  test_server.py  test_threads.py  test_virt.py  test_work_stealing.py
